# YASS

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: deploy.sh  setup.sh  slack-sheet-sync.service.template  slack-sheet-sync.timer
slack_sheet_sync/: __init__.py  __main__.py  config.py  find_field_id.py  google_auth.py  google_oauth_setup.py  sheet_sink.py  slack_source.py
tests/: conftest.py  test_config.py  test_google_auth.py  test_sheet_sink.py  test_slack_source.py
