[project]
name = "slack-sheet-sync"
version = "0.1.0"
description = "Poll Slack membership/profile fields and sync them into a Google Sheet."
requires-python = ">=3.10"
dependencies = [
    "slack_sdk>=3.27.0",
    "gspread>=6.0.0",
    "google-auth>=2.28.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
# Installed by default with `uv sync` (dev is in uv's default-groups).
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["slack_sheet_sync"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
